# mimic

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
mimic/: __init__.py  cli.py
mimic/core/: generator.py  policy.py  sink.py
mimic/mutators/: affix.py  base.py  case.py  combine.py  leet.py  reverse.py
mimic/rules/: hashcat.py
mimic/ui/: banner.py
tests/: test_banner.py  test_cli.py  test_combine.py  test_generator.py  test_leet.py  test_policy.py
